tests/negative/typecheck/array.orng
// array.orng:6:26: error: expected a value of type `Bool`, got a value of type `Int`
//     let x: [3]Bool = ['1', '2', '3']
//                         ^
// 
fn main() -> Int {
    let x: [3]Bool = ['1', '2', '3']
    x[1]
}